<resources>
    <string name="app_name">core</string>
    <string name="sure">确认</string>
    <string name="camera">拍照</string>
    <string name="select_from_album">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="mail_address">Email/手机号</string>
    <string name="email">Email</string>
    <string name="verify_code">手机验证码</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="new_register">新用户注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="sina_login">用微博账号登录</string>
    <string name="sina_login_failed">微博登录失败</string>
    <string name="qq_login">用QQ账号登录</string>
    <string name="qq_login_failed">QQ账号登录失败</string>
    <string name="some_account_login">可以用以下账号登录</string>
    <string name="moder_media_account_login">用InNote社区账号登录</string>
    <string name="register_title">注册InNote社区账号</string>
    <string name="password_safety">密码安全性</string>
    <string name="password_safety_weak">弱</string>
    <string name="password_safety_mid">中</string>
    <string name="password_safety_high">高</string>
    <string name="get_account_error">手机号码格式错误</string>
    <string name="password_length_error">密码长度应该在4-16个字符之间</string>
    <string name="nick_name_length_error">用户昵称应该低于8位</string>
    <string name="modify_password">请输入您的旧密码和新密码，如果没有设置过密码，旧密码请留空。</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="complete">完成</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="reset_password">重置密码</string>
    <string name="modify_success">修改成功</string>
    <string name="find_back_pwd">找回密码</string>
    <string name="find_back_pwd1">是否要向 %1$s 发送密码重置邮件</string>
    <string name="forget_email_text1">邮件已发送</string>
    <string name="forget_email_text2">如5分钟后仍未收到密码重置邮件，请与我们联系。</string>
    <string name="need_band">请先绑定手机或邮箱后再设置密码</string>
    <string name="set_band">去设置</string>
    <string name="msg_modify_pwd_failed">密码修改失败</string>
    <string name="cover_share_message">%1$s - %2$s %3$s --分享来自@iWeekly周末画报 Android 版</string>
    <string name="entry_share_url">阅读全文:\u0020</string>
    <string name="share_wp_content">【%1$s】%2$s %3$s</string>
    <string name="share_by_email_title">我在【%1$s】看到了一篇文章，想要分享给你</string>
    <string name="fecthing_http">正在更新数据</string>
    <string name="fecthing_ok">更新成功</string>
    <string name="weixin_friend">微信好友</string>
    <string name="weixin_friends">微信朋友圈</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq_friend">QQ好友</string>
    <string name="more">更多</string>
    <string name="weixin_register_error">微信注册失败！</string>
    <string name="no_weixin">微信尚未安装！</string>
    <string name="weixin_version_low">微信版本较低，无法发送到朋友圈，请更新！</string>
    <string name="share_to_weibo_title">分享到微博</string>
    <string name="send">发送</string>
    <string name="enter_content">请输入内容！</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="my_vip_btn1">会员订购</string>
    <string name="my_vip_btn2">会员续费</string>
    <string name="back">返回</string>
    <string name="follow_all">全部关注</string>
    <string name="card_num">%s条笔记</string>
    <string name="follow_num">%s人关注</string>
    <string name="card">笔记</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="fans">粉丝</string>
    <string name="follow_success">关注成功</string>
    <string name="follow_failed">关注失败</string>
    <string name="unfollow_success">取消关注成功</string>
    <string name="unfollow_failed">取消关注失败</string>
    <string name="my_homepage">我的首页</string>
    <string name="msg_ok">好的</string>
    <string name="weixin_info">已经将公众号账号复制到剪贴板，请到微信中粘贴并搜索关注。</string>
    <string name="adv_im_go">跳出</string>
    <string name="dial_error">您的手机缺少所需的功能模块，无法继续操作。</string>
    <string name="all_zhanlan">全部展览</string>
    <string name="all_zhanlan_list">分类浏览新展</string>
    <string name="all_zhanguan">全部展馆</string>
    <string name="choose_city">选择城市</string>
    <string name="hot_hint">选择城市查看展览</string>
    <string name="my_zhanlan">我的展览</string>
    <string name="about_us">关于我们</string>
    <string name="buquan_info">请补全配送信息</string>
    <string name="time">时间</string>
    <string name="area">地区</string>
    <string name="zhuanjia">专家</string>
    <string name="zhanguan">展馆</string>
    <string name="add_title">添加新的观展行程</string>
    <string name="add_date">观展日期</string>
    <string name="add_to_calendar">添加至日历</string>
    <string name="add_more">添加更多展览</string>
    <string name="chaxuning">正在查询</string>
    <string name="duihuan_code">兑换激活码</string>
    <string name="usercenter">个人中心</string>
    <string name="real_name">真实姓名</string>
    <string name="sign">个性签名</string>
    <string name="birthday">生日</string>
    <string name="telephone">手机号码</string>
    <string name="address">地址</string>
    <string name="email_ch">邮箱</string>
    <string name="banded">已绑定账号</string>
    <string name="edit_pwd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="nickname">昵称</string>
    <string name="vip_name">姓名</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索您感兴趣的内容</string>
    <string name="modern_login">Modern Passport登录</string>
    <string name="modern_register">注册Modern Passport</string>
    <string name="phone_login">短信验证码登录</string>
    <string name="open_login">社交账号登录</string>
    <string name="pwd_login">账号密码登录</string>
    <string name="phone_login_mesage">未注册过的手机号将会自动创建为新账户</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="register_to_login">已有账号？ 登录</string>
    <string name="register_pwd_hint">设置密码（至少4位）</string>
    <string name="register_announcation1">注册即是同意商业周刊的 用户协议</string>
    <string name="register_announcation2"> 和 隐私声明</string>
    <string name="code_register_announcation">验证码已发送至您的手机，请注意查收</string>
    <string name="password_digits">_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="reset_pwd">重置密码</string>
    <string name="reset_new_pwd">设置新密码</string>
    <string name="msg_login_pwd_null">请输入密码</string>
    <string name="msg_has_no_code">请输入短信验证码</string>
    <string name="msg_login_email_error">无效的邮箱地址或手机号码</string>
    <string name="msg_login_email_null">请输入邮箱或手机号码</string>
    <string name="msg_register_success">注册成功</string>
    <string name="msg_register_failed">注册失败</string>
    <string name="msg_login_success">登录成功</string>
    <string name="msg_login_fail">登录失败</string>
    <string name="msg_find_pwd_failed">找回密码失败</string>
    <string name="msg_find_pwd_success">重置密码的邮件已经发送到 %s，如果 5 分钟后仍没有收到邮件，请联系 feedback@modernmedia.com.cn。</string>
    <string name="msg_modify_success">修改成功</string>
    <string name="msg_modify_failed">修改失败</string>
    <string name="Weibo_Message_NULL">分享数据不能为空</string>
    <string name="Weibo_Message_LONG">已超出140个字</string>
    <string name="Weibo_Share_Success">微博分享成功</string>
    <string name="Weibo_Share_Error">微博分享失败</string>
    <string name="Weibo_Share_Repeat">已经分享过了</string>
    <string name="save_picture_fail">图片保存失败,请检查网络</string>
    <string name="msg_avatar_upload_success">头像上传成功</string>
    <string name="msg_avatar_upload_failed">头像上传失败</string>
    <string name="msg_avatar_get_failed">头像取得失败</string>
    <string name="my_ing">正在进行</string>
    <string name="my_ed">已经完成</string>
    <string name="no_login">未登录</string>
    <string name="no_login1">添加展览，请先登录</string>
    <string name="list_hint">暂无规划中的展览行程\n 点击添加</string>
    <string name="click_add"></string>
    <string name="look_detail1">查看展览详情</string>
    <string name="notification">提醒</string>
    <string name="notification_desc">提前一个小时</string>
    <string name="tongbu">同步</string>
    <string name="tongbu_desc">同步到系统日历</string>
    <string name="share">分享</string>
    <string name="menu_edit">编辑行程</string>
    <string name="menu_cancle">取消行程</string>
    <string name="shut">关闭</string>
    <string name="save">保存</string>
    <string name="user_sign">个人签名</string>
    <string name="motify_sign">修改个人签名</string>
    <string name="motify_email">修改邮箱</string>
    <string name="motify_nickname">修改昵称</string>
    <string name="motify_realname">修改真实姓名</string>
    <string name="motify_telephone">修改电话号码</string>
    <string name="motify_address">修改地址</string>
    <string name="confirm_change">确认修改</string>
    <string name="setting_push_switch">推送开关</string>
    <string name="setting_push">消息推送</string>
    <string name="setting_auto_loop">首页焦点图自动轮播</string>
    <string name="setting_wifi_auto_vedio">Wi-Fi下自动播放视频</string>
    <string name="setting_function">功能设置</string>
    <string name="setting">系统设置</string>
    <string name="QQ">QQ</string>
    <string name="weixin">微信</string>
    <string name="mail_">邮件</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="sina">微博</string>
    <string name="exit_app">再按一次退出应用</string>
    <string name="add_success">添加行程成功</string>
    <string name="add_faild">添加行程失败</string>
    <string name="edit_success">修改行程成功</string>
    <string name="edit_faild">修改行程失败</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="ing">正在进行中</string>
    <string name="inging">%s天后开展</string>
    <string name="baidu_map">百度地图</string>
    <string name="gaode_map">高德地图</string>
    <string name="google_map">谷歌地图</string>
    <string name="alarm_1">提前1小时</string>
    <string name="alarm_2">提前一天</string>
    <string name="city_lists">城市收藏</string>
    <string name="shoucanged">已收藏</string>
    <string name="vip_pay_title">在线支付</string>
    <string name="vip_pay_name_title">商品名称</string>
    <string name="vip_pay_time_title">下单时间</string>
    <string name="vip_pay_money_title">支付金额</string>
    <string name="vip_pay_style">选择支付方式</string>
    <string name="vip_pay_style_null">请您选择支付方式</string>
    <string name="vip_pay_btn">确认支付</string>
    <string name="vip_pay_btn1">会员续费</string>
    <string name="message_notification">短信提醒</string>
    <string name="message_notification1">用于您身份的识别</string>
    <string name="message_notification2">用于接收课程提醒信息</string>
    <string name="order_phone">手机</string>
    <string name="order_phone_hint">填写收件人手机号</string>
    <string name="zhifubaopay">支付宝</string>
    <string name="peisong_style">配送方式</string>
    <string name="order_info">新增配送地址</string>
    <string name="order_error_null">配送地址内容不能为空</string>
    <string name="order_error_phone_number">请输入11位手机号码</string>
    <string name="order_error_phone_format">请正确填写手机号码</string>
    <string name="order_post">提交</string>
    <string name="order_name">收件人</string>
    <string name="order_name_hint">填写收件人姓名</string>
    <string name="order_address_hint">填写详细地址</string>
    <string name="order_city">城市</string>
    <string name="vip_post_hint">暂不支持海外地区配送</string>
    <string name="order_address">地址</string>
    <string name="vip_dialog_birth">选择日期</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="order_make_faild">订单生成失败</string>
    <string name="my_vip_level">我的VIP特权</string>
    <string name="my_vip_nolevel">VIP特权通道</string>
    <string name="vip_address_info">配送信息</string>
    <string name="vip_pay_detail">交易详情</string>
    <string name="vip_pay_success">交易成功</string>
    <string name="vip_pay_fail">交易失败</string>
    <string name="vip_pay_cancel">交易取消</string>
    <string name="vip_paycallback_money">交易金额</string>
    <string name="vip_paycallback_style">付款方式</string>
    <string name="vip_paycallback_product">商品名称</string>
    <string name="vip_paycallback_id">订单编号</string>
    <string name="vip_paycallback_time">创建时间</string>
    <string name="vip_pay_ing">订单正在处理，请稍候。</string>
    <string name="update">软件版本更新</string>
</resources>