<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/body_bg"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_bar_height"
        android:background="@color/title_bar">

        <ImageView
            android:id="@+id/order_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@null"
            android:scaleType="center"
            android:src="@mipmap/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_info"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/vip_name"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14"/>

        <EditText
            android:id="@+id/order_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:hint="@string/order_name_hint"
            android:maxLength="40"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/order_phone"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="+86"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14"/>

        <EditText
            android:id="@+id/order_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/order_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/choose_city"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14"/>

        <TextView
            android:id="@+id/order_city_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/vip_post_hint"
            android:maxLength="40"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/order_address"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14"/>

        <EditText
            android:id="@+id/order_address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/order_address_hint"
            android:maxLength="40"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line"/>


    <Button
        android:id="@+id/order_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@drawable/black_10radius_corner_bg"
        android:text="@string/order_post"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"/>


</LinearLayout>