<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/login_whole_bg"
              android:orientation="vertical"
              android:padding="15dp">

    <ImageView
        android:id="@+id/register_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:contentDescription="@null"
        android:src="@mipmap/ic_close_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/modern_register"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/gary_line_corner_bg"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/register_nickname_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_text_field_clear"/>

            <EditText
                android:id="@+id/register_nickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/register_nickname_clear"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/nickname"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_14"/>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/register_account_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_text_field_clear"/>

            <EditText
                android:id="@+id/register_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/register_account_clear"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/mail_address"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_14"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

        <LinearLayout
            android:id="@+id/register_ifshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/register_verify_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/get_verify_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14"/>

                <EditText
                    android:id="@+id/register_verify"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/register_verify_get"
                    android:background="@null"
                    android:digits="@string/password_digits"
                    android:gravity="center_vertical"
                    android:hint="@string/input_verify_code"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_dark"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_14"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line"/>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/register_pwd_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/password_unshow"/>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/register_pwd_clear"
                android:background="@null"
                android:digits="@string/password_digits"
                android:gravity="center_vertical"
                android:hint="@string/register_pwd_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_16"/>
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_announcation1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/register_announcation1"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14"/>

        <TextView
            android:id="@+id/register_announcation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/register_announcation2"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>


    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@mipmap/login_btn_bg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"/>


    <TextView
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingTop="15dp"
        android:text="@string/register_to_login"
        android:textColor="@color/gray_dark"/>


</LinearLayout>